--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Medical Pager</title>
+    <script src="https://cdn.tailwindcss.com" defer></script>
+    <title>Yalck</title>
   </head>
   <body>
     <div id="root"></div>
